# easy-gait

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: _shared.py  app.py
dashboard/_pages/: 1_Explorare_semnale.py  2_Detectie_evenimente.py  3_Parametri_temporali.py  4_Simulator_FSM.py  5_Comparatie_activitati.py  6_Simulator_proteza.py
dashboard/pages/: 1_Explorare_semnale.py  1_📊_Signal_Explorer.py  2_Detectie_evenimente.py  2_👣_Gait_Events.py  3_Parametri_temporali.py  3_📈_Parameters.py  4_Simulator_FSM.py  4_🦿_FSM_Simulator.py  5_Comparatie_activitati.py  5_🔬_Activity_Compare.py  6_Simulator_proteza.py  6_🎬_Prosthesis_Simulator.py
data/processed/: events_validation.csv  events_validation_v2.csv  fsm_validation.csv  fsm_validation_v2.csv  intact_ankle_profile.csv  wassall_per_terrain.csv  (+2 more)
docs/: ALGORITHMS.md  DESIGN.md
notebooks/: 01_explore_samala.py  02_explore_wassall.py  03_validate_events.py  04_fsm_validation.py
raport/: Paun_Raluca_Raport_CS4-final.docx
scripts/: compare_subjects_rom.py  compute_wassall_summary.py  debug_phases.py  debug_timeline.py  generate_documentation_pdf.py  make_v2_figures.py  validate_events_all.py  validate_events_v2.py  validate_fsm_all.py  validate_fsm_v2.py
tests/: test_fsm.py  test_gait_events.py  test_gait_profile.py  test_impedance.py  test_parameters.py  test_preprocessing.py
verification/: apply_to_docx.py  build_workunits.py  extract_docx.py  new_content.py  render_litcompare.py  render_reports.py  workflow_litcompare.js  workflow_verify.js  workflow_verify_edits.js
(+2138 files in other folders)
