[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-gait"
version = "0.1.0"
description = "Platforma software pentru analiza ciclului de mers IMU si control FSM gleznei protetice transtibiale"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Raluca Andreea Paun" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "plotly>=5.18",
    "streamlit>=1.30",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff", "black", "jupyter", "ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
